# mapigen

./: .gitignore  Makefile  README.md  mock_caller.py  pyproject.toml  pyrightconfig.json
docs/: API_REFERENCE.md  integration_targets.yaml  models.md
mock/: mock_caller.py
schemas/: utilize.v2.schema.json
src/mapigen/: __init__.py  auth_helpers.py  client.py  models.py  proxy.py  services.json
src/mapigen/auth/: providers.py
src/mapigen/cache/: ranking.py  storage.py
src/mapigen/client/: __init__.py  config.py  core.py  exceptions.py
src/mapigen/discovery/: __init__.py  operations.py  services.py
tests/: conftest.py  helpers.py  reporting.py  run_pytest.py  test_proxy.py
tests/generic/: test_data_integrity.py
tests/integration/: test_asana-sdk_integration.py  test_aws-sellers_integration.py  test_discord_discord_generated.py  test_discord_integration.py  test_full_sdk.py  test_github_github_generated.py  test_github_integration.py  test_pokeapi_integration.py  test_pokeapi_pokeapi_generated.py  test_spotify_RESTAPI_generated.py  test_spotify_integration.py  test_stripe_integration.py  test_stripe_stripe_generated.py
tests/unit/: test_auth_providers.py  test_discovery.py  test_helpers.py  test_pipeline.py  test_ranking.py  test_storage.py  test_utils.py  test_validation.py
tools/: deep_validate.py  populate_data.py  utils.py  validate_data.py
utils/: generate_integration_report.py  generate_integration_tests.py  inspector.py  integration_test.py.j2  list_operations.py  profiler.py  show_format.py
utils/templates/: integration_test.py.j2
(+35 files in other folders)
